--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       content="A front-end only avatar generator"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://vue-color-avatar.vercel.app/" />
+    <meta property="og:url" content="https://avatar.oslook.com/" />
     <meta property="og:image" content="https://i.imgur.com/FIJEI9V.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="vue-color-avatar.vercel.app" />
+    <meta property="twitter:domain" content="avatar.oslook.com" />
     <meta
       property="twitter:url"
-      content="https://vue-color-avatar.vercel.app/"
+      content="https://avatar.oslook.com/"
     />
     <meta name="twitter:title" content="Vue Color Avatar" />
     <meta
@@ -38,20 +38,6 @@
 
     <title>Vue Color Avatar</title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-B4C9FN5DFR"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || []
-      function gtag() {
-        dataLayer.push(arguments)
-      }
-      gtag('js', new Date())
-
-      gtag('config', 'G-B4C9FN5DFR')
-    </script>
 
     <style>
       body {
